--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "homebridge-airthings",
-  "version": "0.8.0",
-  "description": "A Homebridge plugin for Airthings air quality monitors via the Airthings Consumer API.",
+  "name": "homebridge-ambisense",
+  "displayName": "Ambisense Homebridge",
+  "version": "0.0.1",
+  "description": "A Homebridge plugin for Ambisense air quality monitors via the Ambisense Consumer API.",
   "keywords": [
-    "airthings",
+    "ambisense",
     "homebridge",
     "homebridge-plugin"
   ],
-  "homepage": "https://github.com/michaelahern/homebridge-airthings",
+  "homepage": "https://github.com/csprocket777/homebridge-ambisense",
   "bugs": {
-    "url": "http://github.com/michaelahern/homebridge-airthings/issues"
+    "url": "http://github.com/csprocket777/homebridge-ambisense/issues"
   },
   "license": "ISC",
-  "author": "Michael Ahern <michael.ahern@gmail.com>",
-  "funding": {
-    "type": "paypal",
-    "url": "https://paypal.me/michaeljahern"
-  },
+  "author": "Chuck Shipman <csprocket777@gmail.com>",
   "files": [
     "config.schema.json",
     "dist"
   ],
-  "main": "dist/plugin.js",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/michaelahern/homebridge-airthings.git"
+    "url": "git://github.com/csprocket777/homebridge-ambisense.git"
   },
   "scripts": {
     "eslint": "eslint src/**.ts --max-warnings=0",
@@ -32,11 +29,14 @@
     "lint": "npm run eslint",
     "lint-fix": "npm run eslint-fix",
     "fmt": "npm run lint-fix",
+    "watch": "npm run build && npm link && nodemon",
     "build": "npm run clean && tsc",
     "clean": "rimraf ./dist",
-    "prepublishOnly": "npm run lint && npm run build"
+    "prepublishOnly": "npm run lint && npm run build",
+    "dev": "npm run build && node dist/test.js"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "axios": "^1.2.0",
     "simple-oauth2": "^5.0.0"
   },
@@ -47,7 +47,10 @@
     "@typescript-eslint/parser": "~5.47",
     "eslint": "~8.23",
     "homebridge": "^1.6.0",
+    "homebridge-config-ui-x": "^4.50.2",
+    "nodemon": "^2.0.22",
     "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
   "engines": {
